--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Solar 3D Project</title>
     <script src="index.js" type="module"></script>
-    <script src="index.css" type="module"></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <canvas id="main"></canvas>
